Uploaded image for project: 'Parquet'
  1. Parquet
  2. PARQUET-1255

[C++] Exceptions thrown in some tests

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • None
    • cpp-1.5.0
    • parquet-cpp
    • None

    Description

      Some tests (not all) throw a basic_string exception. Example:

      $ ./debug/reader-test 
      Running main() from gtest_main.cc
      [==========] Running 11 tests from 4 test cases.
      [----------] Global test environment set-up.
      [----------] 7 tests from TestAllTypesPlain
      [ RUN      ] TestAllTypesPlain.NoopConstructDestruct
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.NoopConstructDestruct (0 ms)
      [ RUN      ] TestAllTypesPlain.TestBatchRead
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.TestBatchRead (0 ms)
      [ RUN      ] TestAllTypesPlain.TestFlatScannerInt32
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.TestFlatScannerInt32 (0 ms)
      [ RUN      ] TestAllTypesPlain.TestSetScannerBatchSize
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.TestSetScannerBatchSize (0 ms)
      [ RUN      ] TestAllTypesPlain.DebugPrintWorks
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.DebugPrintWorks (0 ms)
      [ RUN      ] TestAllTypesPlain.ColumnSelection
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.ColumnSelection (0 ms)
      [ RUN      ] TestAllTypesPlain.ColumnSelectionOutOfRange
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestAllTypesPlain.ColumnSelectionOutOfRange (0 ms)
      [----------] 7 tests from TestAllTypesPlain (0 ms total)
      
      [----------] 2 tests from TestLocalFile
      [ RUN      ] TestLocalFile.FileClosedOnDestruction
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestLocalFile.FileClosedOnDestruction (0 ms)
      [ RUN      ] TestLocalFile.OpenWithMetadata
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in SetUp().
      [  FAILED  ] TestLocalFile.OpenWithMetadata (0 ms)
      [----------] 2 tests from TestLocalFile (0 ms total)
      
      [----------] 1 test from TestFileReaderAdHoc
      [ RUN      ] TestFileReaderAdHoc.NationDictTruncatedDataPage
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in the test body.
      [  FAILED  ] TestFileReaderAdHoc.NationDictTruncatedDataPage (1 ms)
      [----------] 1 test from TestFileReaderAdHoc (1 ms total)
      
      [----------] 1 test from TestJSONWithLocalFile
      [ RUN      ] TestJSONWithLocalFile.JSONOutput
      unknown file: Failure
      C++ exception with description "basic_string::_S_construct null not valid" thrown in the test body.
      [  FAILED  ] TestJSONWithLocalFile.JSONOutput (0 ms)
      [----------] 1 test from TestJSONWithLocalFile (0 ms total)
      
      [----------] Global test environment tear-down
      [==========] 11 tests from 4 test cases ran. (1 ms total)
      [  PASSED  ] 0 tests.
      [  FAILED  ] 11 tests, listed below:
      [  FAILED  ] TestAllTypesPlain.NoopConstructDestruct
      [  FAILED  ] TestAllTypesPlain.TestBatchRead
      [  FAILED  ] TestAllTypesPlain.TestFlatScannerInt32
      [  FAILED  ] TestAllTypesPlain.TestSetScannerBatchSize
      [  FAILED  ] TestAllTypesPlain.DebugPrintWorks
      [  FAILED  ] TestAllTypesPlain.ColumnSelection
      [  FAILED  ] TestAllTypesPlain.ColumnSelectionOutOfRange
      [  FAILED  ] TestLocalFile.FileClosedOnDestruction
      [  FAILED  ] TestLocalFile.OpenWithMetadata
      [  FAILED  ] TestFileReaderAdHoc.NationDictTruncatedDataPage
      [  FAILED  ] TestJSONWithLocalFile.JSONOutput
      
      11 FAILED TESTS
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: