PARQUET-1255: Fix error message when PARQUET_TEST_DATA isn't defined

Author: Antoine Pitrou <antoine@python.org>

Closes #448 from pitrou/PARQUET-1255 and squashes the following commits:

b162511 [Antoine Pitrou] PARQUET-1255: Fix error message when PARQUET_TEST_DATA isn't defined

Change-Id: I8f900b59e7fa6e41171e004c61dfa247201047ef